@@ -1,5 +1,9 @@
 2007-06-29  Brady Anderson <brady.anderson@gmail.com> 
 
+	removed debug messages
+
+2007-06-29  Brady Anderson <brady.anderson@gmail.com> 
+
 	started and stopped the PhotoService
 
 2007-06-29  Brady Anderson <brady.anderson@gmail.com> 
